--- a/api-reference/access/overview.mdx
+++ b/api-reference/access/overview.mdx
@@ -32,8 +32,8 @@ reach any underlying OnlyFans path.
 
 ## Authentication
 
-Every request must include your OFAuth API key and platform identifier. Then choose
-one of two strategies for the user session that will power the request.
+Every request must include your OFAuth API key. Then choose one of two
+strategies for the user session that will power the request.
 
 <Tabs>
   <Tab title="Headers">
@@ -41,7 +41,6 @@ one of two strategies for the user session that will power the request.
   | Header | Required | Notes |
   | ------ | -------- | ----- |
   | `apikey` | Yes | Found in the OFAuth dashboard |
-  | `x-platform-id` | Yes |  |
 
   </Tab>
   <Tab title="User Session Options">
