--- a/api-reference/link/overview.mdx
+++ b/api-reference/link/overview.mdx
@@ -40,12 +40,10 @@ hosted experience, and monitor session state.
 
 ## Authentication
 
-Include your API key on every request. When calling from the server you may also
-set `x-platform-id` to speed up key validation.
+Include your API key on every request.
 
 ```http
 apikey: YOUR_API_KEY
-x-platform-id: YOUR_PLATFORM_ID
 ```
 
 ## Session Types
