--- a/architecture/authentication.mdx
+++ b/architecture/authentication.mdx
@@ -7,21 +7,16 @@ description: "Authentication methods, connection management, and security archit
 
 ### API Key Authentication
 
-All API requests require authentication using your API key and platform ID in the headers:
+All API requests require authentication using your API key:
 
 ```http
 apikey: YOUR_API_KEY
-x-platform-id: YOUR_PLATFORM_ID
 ```
 
 <Warning>
 	**Security**: Keep your API keys secure. Never expose them in client-side
 	code, commit them to version control, or share them publicly.
 </Warning>
-
-<Info>
-	**Legacy Support**: If you're unable to provide the `x-platform-id` header immediately, the API will still work but with slightly higher latency. We strongly recommend including this header for best performance. (This behavior will be phased out in 2026.)
-</Info>
 
 ### Connection-Based Access
 
