--- a/api-reference/account/overview.mdx
+++ b/api-reference/account/overview.mdx
@@ -1,73 +1,43 @@
 ---
 title: "Account API Overview"
-description: "Retrieve organization metadata and plan information under /v2/account"
+description: "Retrieve organization metadata and manage connections under /v2/account and /v2/connections"
 ---
 
 ## Overview
 
-The Account API exposes high-level, non-sensitive details about your
-organization. Use it to confirm API key setup, surface plan entitlements in
-internal dashboards, and display rate limits without handling secrets.
+The Account API exposes high-level details about your organization and tools to manage your authenticated connections.
 
-## Base URL
+## Base URLs
 
-`https://api.ofauth.com/v2/account`
+- Account Metadata: `https://api.ofauth.com/v2/account`
+- Connections: `https://api.ofauth.com/v2/connections`
 
-## Core Endpoint
+## Core Endpoints
 
 | Endpoint | Method | Purpose |
 | -------- | ------ | ------- |
-| `/whoami` | `GET` | Return platform name, ID, benefits, permissions, allowed origins, and rate limits |
-
-<Info>
-  Additional account management endpoints (webhooks, connections, usage) will
-  reappear here as they graduate from private beta.
-</Info>
+| `/account/whoami` | `GET` | Return platform name, ID, benefits, permissions, allowed origins, and rate limits |
+| `/connections` | `GET` | List all authenticated connections |
+| `/connections/{connectionId}` | `DELETE` | Delete/disconnect a connection |
 
 ## Authentication
+
+All endpoints require your API key.
 
 ```http
 apikey: YOUR_API_KEY
 ```
 
-## Response Preview
-
-```json
-{
-  "platform": {
-    "id": "plat_123",
-    "name": "Acme Analytics",
-    "benefits": {
-      "access": true,
-      "link": true
-    },
-    "permissions": ["profile:read"],
-    "allowedOrigins": ["https://app.example.com"],
-    "maxRateLimits": {
-      "access": {
-        "capacity": 120,
-        "refillRate": 1
-      }
-    }
-  }
-}
-```
-
-<Tip>
-  The response never includes secrets or session-level data. It is safe to
-  surface in internal dashboards or admin tools.
-</Tip>
-
 ## Related Docs
 
 <CardGroup cols={3}>
-  <Card title="Account Guide" icon="book" href="/guides/account">
-    End-to-end walkthrough with examples and security best practices
+  <Card title="WhoAmI" icon="id-card" href="/api-reference/account/whoami">
+    Platform metadata
+  </Card>
+  <Card title="Connections" icon="users" href="/api-reference/account/connections">
+    Manage authenticated sessions
   </Card>
   <Card title="Access API" icon="key" href="/api-reference/access/overview">
     Use connection IDs to request OnlyFans data
-  </Card>
-  <Card title="Dynamic Rules" icon="sparkles" href="/api-reference/dynamic-rules/overview">
-    Sign requests or monitor revision changes
   </Card>
 </CardGroup>
